@@ -4,6 +4,6 @@
 #include "spvm_base.h"
 
 void* SPVM_RUNTIME_ALLOCATOR_alloc(SPVM_RUNTIME* runtime, int32_t byte_size);
-void* SPVM_RUNTIME_ALLOCATOR_free(SPVM_RUNTIME* runtime, void* block);
+void SPVM_RUNTIME_ALLOCATOR_free(SPVM_RUNTIME* runtime, void* block);
 
 #endif
