@@ -7,6 +7,7 @@
       spvm_runtime_allocator.h
       spvm_runtime_allocator.c
   - fix native function name set_object_array_element, get_object_array_element. this name was wrong by wrong replacing.
+  - fix weaken memory broken bug
 0.0347 2018-06-13
   - fix bug : [rt.cpan.org #125541] System perl used in build process
     
